# slide-workspace

./: .dockerignore  .gitignore  Dockerfile  README.rst  pyproject.toml
.devcontainer/: devcontainer.json
slides_workspace/: __init__.py
slides_workspace/cli/: build.py  init.py
slides_workspace/templates/revealjs/: cookiecutter.json
slides_workspace/templates/revealjs/hooks/: post_gen_project.py
slides_workspace/templates/revealjs/{{cookiecutter.slide_slug}}/: README.md  conf.py  index.rst
slides_workspace/templates/revealjs/{{cookiecutter.slide_slug}}/.devcontainer/: devcontainer.json
