[tool.poetry]
name = "slides-workspace"
version = "0.1.0"
description = "Workspace for attakei's presentations"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
sphinx = "^3.1.1"
sphinx-revealjs = "^0.12.0"
sphinxcontrib-gtagjs = "^0.2.0"
sphinxcontrib-blockdiag = "^2.0.0"
click = "^7.1.2"
cookiecutter = "^1.7.2"
libsass = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"

[tool.poetry.scripts]
"slide.init" = "slides_workspace.cli.init:main"
"slide.build" = "slides_workspace.cli.build:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
